[package]
name = "poseidon-bn254"
version = "0.1.0"
edition = "2021"
authors = ["Morph Developers--changed from Scroll's initial version"]
description = "Poseidon hash implementation for BN254"
license = "MIT OR Apache-2.0"

[dependencies]
sp1-core = { git = "https://github.com/morph-l2/sp1.git" }
sp1-zkvm = { git = "https://github.com/morph-l2/sp1.git" }
sp1-derive = { git = "https://github.com/morph-l2/sp1.git" }
sp1-intrinsics = { git = "https://github.com/Wel15/sp1-intrinsics.git" }
bn254 = { git = "https://github.com/Wel15/bn254.git" }

[dev-dependencies]
itertools = "0.11"

[features]
default = ["std"]
std = []

[workspace]
members = [
    "tests/poseidon/program",
    "tests/poseidon/script",
]

[workspace.dependencies]
itertools = "0.11"
poseidon-bn254 = { path = "." }
sp1-core = { git = "https://github.com/morph-l2/sp1.git" }
sp1-zkvm = { git = "https://github.com/morph-l2/sp1.git" }
sp1-derive = { git = "https://github.com/morph-l2/sp1.git" }
sp1-lib = { git = "https://github.com/morph-l2/sp1.git" }
sp1-intrinsics = { git = "https://github.com/Wel15/sp1-intrinsics.git" }
bn254 = { git = "https://github.com/Wel15/bn254.git" }