[package]
name = "poseidon-bn254"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-intrinsics = { git = "https://github.com/Wel15/sp1-intrinsics", optional = true }
bn254 = { git = "https://github.com/Wel15/bn254", rev = "f6fb66cd180bd02c79ff5a72ccef2a6462c33415", optional = true }
halo2curves_v1 = { package = "halo2curves", version = "0.1.0", optional = true }
halo2curves_v3 = { package = "halo2curves", git = "https://github.com/scroll-tech/halo2curves.git", branch = "base-0.3.3", optional = true }
itertools = "0.13"
sp1-lib = { git = "https://github.com/morph-l2/sp1.git", branch = "fix-memcopy-chip", optional = true }

[dev-dependencies]
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
poseidon-base = { git = "https://github.com/scroll-tech/poseidon-circuit", branch = "main" }

[features]
bn254 = ["dep:bn254"]
halo2curves_v1 = ["dep:halo2curves_v1"]
halo2curves_v3 = ["dep:halo2curves_v3"]
zkvm-hint = ["sp1-lib"]
default = ["bn254"]
asm = [] 
bits = [] 